# End-to-End-Document-RAG-

./: .env  README.md  pyproject.toml  requirements.txt
Data/: urls.txt
src/config/: config.py
src/node/: nodes.py  reactnode.py
src/state/: rag_state.py
src/vectorstore/: vectorstore.py
